# mpool

./: CMakeLists.txt  README.md
db/: account.sql
src/: CMakeLists.txt
src/cmake/: genrev.cmake  revision.h.in.cmake  showoptions.cmake
src/cmake/compiler/clang/: settings.cmake
src/cmake/compiler/gcc/: settings.cmake
src/cmake/compiler/icc/: settings.cmake
src/cmake/compiler/mingw/: settings.cmake
src/cmake/compiler/msvc/: settings.cmake
src/cmake/conf/: config.cmake
src/cmake/macros/: CheckBuildDir.cmake  ConfigInstall.cmake  ConfigureApplications.cmake  ConfigureBaseTargets.cmake  FindGit.cmake  FindMySQL.cmake  GroupSources.cmake
src/cmake/platform/unix/: settings.cmake
src/cmake/platform/win/: settings.cmake
src/common/: Banner.cpp  Banner.h  CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Define.h  GitRevision.cpp  GitRevision.h
src/common/Asio/: IoContext.h
src/common/Configuration/: Config.cpp  Config.h
src/common/Cryptography/: BigNumber.cpp  BigNumber.h  CryptoConstants.h  CryptoHash.h  CryptoRandom.cpp  CryptoRandom.h  MpoolDefines.h  SRP6.cpp  SRP6.h
src/common/Debugging/: Errors.cpp  Errors.h
src/common/Threading/: PCQueue.h
src/common/Utilities/: AsyncCallbackProcessor.h  Duration.h  Optional.h  StringConvert.h  StringFormat.cpp  StringFormat.h  Timer.cpp  Timer.h  Tokenize.cpp  Tokenize.h  Types.h  Util.cpp  Util.h  advstd.h
src/genrev/: CMakeLists.txt
src/server/: CMakeLists.txt
src/server/apps/: CMakeLists.txt
src/server/apps/logon/: NetWork.cpp  NetWork.h  logon.conf.dist  main.cpp  types.h
src/server/database/: CMakeLists.txt
src/server/database/Database/: AdhocStatement.cpp  AdhocStatement.h  DatabaseEnv.cpp  DatabaseEnv.h  DatabaseEnvFwd.h  DatabaseLoader.cpp  DatabaseLoader.h  DatabaseWorker.cpp  DatabaseWorker.h  DatabaseWorkerPool.cpp  DatabaseWorkerPool.h  Field.cpp  Field.h  MySQLConnection.cpp  MySQLConnection.h  MySQLHacks.h  MySQLPreparedStatement.cpp  MySQLPreparedStatement.h  MySQLThreading.cpp  MySQLThreading.h  MySQLWorkaround.h  PreparedStatement.cpp  PreparedStatement.h  QueryCallback.cpp  QueryCallback.h  QueryHolder.cpp  QueryHolder.h  QueryResult.cpp  QueryResult.h  SQLOperation.h  Transaction.cpp  Transaction.h
src/server/database/Database/Implementation/: LoginDatabase.cpp  LoginDatabase.h
